--- a/index.html
+++ b/index.html
@@ -1047,8 +1047,10 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+<script src="js/contact.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 
 </html>
+
