--- a/index.html
+++ b/index.html
@@ -559,9 +559,11 @@
                 <p class="lead mb-4 animate-typewriter">Estudiante de Ingeniería Civil en Informática y Telecomunicaciones</p>
                 <p class="mb-5 animate-fade-in" style="animation-delay: 0.5s;">Apasionada por el desarrollo web, la programación y el manejo de datos, con interés en los sistemas de telecomunicaciones que permiten conectar y potenciar la tecnología.</p>
                 <div class="animate-fade-in" style="animation-delay: 1s;">
-                 <!--   <a href="#resume" class="btn btn-light btn-lg me-3 hover-scale">
-                        <i class="bi bi-download"></i> Ver CV
-                    </a>   -->
+                 <a href="CV-Paulina-AltamiranoF.pdf" class="btn btn-outline-light btn-lg hover-scale" 
+                        target="_blank" rel="noopener noreferrer"
+                        aria-label="Ver CV en formato PDF">
+                            <i class="bi bi-eye"></i> Ver CV
+                    </a>
                     <a href="#contact" class="btn btn-outline-light btn-lg hover-scale">
                         <i class="bi bi-chat-dots"></i> Contactar
                     </a>
@@ -1053,4 +1055,5 @@ document.addEventListener('DOMContentLoaded', function() {
 </body>
 
 </html>
+
 
